--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Speech Text</title>
     <link rel="stylesheet" href="./index.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <div class="container">
@@ -21,6 +22,25 @@
         <button id="read" class="btn">Read Text</button>
     </div>
     <main></main>
+    <footer>
+        <button id="about">About</button>
+        <div id="text-box-about" class="text-box text-box-about">
+            <div id="close-about" class="close">X</div>
+            <h3>About Dev!</h3>
+            <h2>Nikhil Singh</h2>
+            <img class="avatar"
+                src="https://avatars.githubusercontent.com/u/60490474?s=400&u=89ed2d347df8123f09ad4d12d5f086d31df4a72d&v=4"
+                alt="user image">
+            <div class="footer-social-links">
+                <a href="https://www.github.com/niksingh710" title="Github+" target="_blank"><i
+                        class="fa fa-github"></i></a>
+                <a href="https://www.linkedin.com/in/nikhil-singh-42a440217/" title="LinkedIn+" target="_blank"><i
+                        class="fa fa-linkedin"></i></a>
+                <a href="https://t.me/niksingh710" title="Telegram" target="_blank"><i class="fa fa-telegram"></i></a>
+            </div>
+
+        </div>
+    </footer>
 </div>
 
 <body>
